@@ -7,6 +7,11 @@
 	only one scalar parameter and this must contain a shell metacharacter.
 	[reported by Johann Glaser]
 
+	* opp_neddoc.in: changed network images (GNED diagrams) from JPG
+	to PNG. (It was JPG because a browser beginning with "I" used to have
+	versions around with poor to none PNG support, and GhostScript 
+	of course didn't create GIFs.) [change suggested by Johann Glaser]
+
 2005-05-20  Andras Varga
 
 	* opp_nmakemake: added printing of "entering <directory>", "leaving
